refactor: move population data generation to build-time
  - Reduce default from 10,000 to 5,000 people for better performance
  - Add CLI argument support for flexible population sizes
  - Create 500-person sample file for fast development
  - Update build script to auto-generate data before builds
  - Exclude population.json from git (6MB → 0MB in repo

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "commonjs",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npm run generate && tsc && vite build",
     "preview": "vite preview",
     "start": "node dist/index.js",
-    "generate": "tsx src/generators/populationGenerator.ts"
+    "generate": "tsx src/generators/populationGenerator.ts",
+    "generate:sample": "tsx src/generators/populationGenerator.ts 500"
   },
   "keywords": [],
   "author": "",
